kubernetes/base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-app-lb
  namespace: tekton
  labels:
    app: tekton-app
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: tekton-app
